FIXED CONTRAST

--- a/final-website-project/styles/small.css
+++ b/final-website-project/styles/small.css
@@ -363,7 +363,8 @@ margin: 25px 0 10px 20px;
     top: 15%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #000000;
+  color: #FFFFFF;
+  font-weight: 600;
   }
 
   .category-title {
